# dbui-pyqt5

./: README.rst  main.py  pyproject.toml
markup/: ConnectionManager.qml  main.qml
markup/radarunit/: RadarUnitList.qml
