[tool.poetry]
name = "dbui-pyqt5"
version = "0.1.0"
description = "GUI for DB in PyQt5"
authors = ["Stepan Bakshayev"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3.19"
PyQt5 = "^5.15.1"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
